tests/src/snapshots/tests__parse_call_with_args.snap
---
source: compiler/src/parser.rs
expression: "func(1, \"two\", three)"
---
Ok(
    Module {
        start: 0,
        end: 21,
        imports: [],
        body: [
            Call {
                start: 4,
                end: 21,
                callee: Identifier {
                    start: 0,
                    end: 4,
                    name: "func",
                    inferred_type: Unknown,
                },
                arguments: [
                    NumericLiteral {
                        start: 5,
                        end: 6,
                        value: Int(
                            1,
                        ),
                        raw_value: "1",
                        inferred_type: Unknown,
                    },
                    StringLiteral {
                        start: 9,
                        end: 12,
                        value: "two",
                        inferred_type: Unknown,
                    },
                    Identifier {
                        start: 15,
                        end: 20,
                        name: "three",
                        inferred_type: Unknown,
                    },
                ],
                inferred_type: Unknown,
            },
        ],
    },
)
