tests/src/snapshots/tests__parse_import_module_with_alias.snap
---
source: compiler/src/parser.rs
expression: use something as alias
---
Ok(
    Module {
        start: 0,
        end: 22,
        imports: [
            Import {
                start: 0,
                end: 22,
                alias: Some(
                    "alias",
                ),
                path: "something",
            },
        ],
        body: [],
    },
)
