tests/src/snapshots/tests__tokenize_binary_numbers.snap
---
source: compiler/src/tokenizer.rs
expression: 0b101 0b00 0b1 0B0 0b00100
---
Ok(
    (
        [
            BinaryDigits(
                0,
                5,
            ),
            BinaryDigits(
                6,
                10,
            ),
            BinaryDigits(
                11,
                14,
            ),
            BinaryDigits(
                15,
                18,
            ),
            BinaryDigits(
                19,
                26,
            ),
        ],
        {},
    ),
)
