tests/src/snapshots/tests__tokenize_import.snap
---
source: compiler/src/tokenizer.rs
expression: use path/to/module
---
Ok(
    (
        [
            KeywordUse(
                0,
                3,
            ),
            ImportPath(
                4,
                18,
            ),
        ],
        {},
    ),
)
